src/objects/Campsite__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Campsites</relationshipLabel>
        <relationshipName>Campsites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TestEmail__c</fullName>
        <label>TestEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>test_2__c</fullName>
        <formula>Candidate__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test_2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_look__c</fullName>
        <formula>vehicle__r.test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test-look</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vehicle__c</fullName>
        <label>vehicle</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist.</errorMessage>
            <filterItems>
                <field>vehicle__c.Inactive__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vehicle__c</referenceTo>
        <relationshipLabel>Campsites</relationshipLabel>
        <relationshipName>Campsites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Campsite</label>
    <listViews>
        <fullName>All</fullName>
        <columns>vehicle__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Camp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campsites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>